--- a/package.json
+++ b/package.json
@@ -22,5 +22,14 @@
     "typescript": "5.6.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4"
+ {
+  "devDependencies": {
+    "typescript": "^5.6.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.14.10",
+    "tailwindcss": "^3.4.10",
+    "postcss": "^8.4.41",
+    "autoprefixer": "^10.4.19"
   }
 }
