--- a/package.json
+++ b/package.json
@@ -9,20 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "10.13.2",
-    "firebase-admin": "12.6.0",
     "next": "14.2.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "firebase": "10.13.2",
+    "firebase-admin": "12.6.0"
   },
-  "devDependencies": {
-    "autoprefixer": "10.4.19",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.4.10",
-    "typescript": "5.6.2",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.4"
- {
   "devDependencies": {
     "typescript": "^5.6.3",
     "@types/react": "^18.3.3",
@@ -30,6 +22,14 @@
     "@types/node": "^20.14.10",
     "tailwindcss": "^3.4.10",
     "postcss": "^8.4.41",
-    "autoprefixer": "^10.4.19"
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   }
 }
