--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "firebase": "10.13.2",
-    "firebase-admin": "12.6.0"
+    "firebase-functions": "^5.0.0",
+    "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
