--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "firebase": "10.13.2",
+    "dayjs": "^1.11.10"
     "firebase-functions": "^5.0.0",
     "firebase-admin": "^12.0.0"
   },
