--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "firebase": "10.13.2",
     "dayjs": "^1.11.10",
     "firebase-functions": "^5.0.0",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
      "clsx": "2.1.0"
   },
   "devDependencies": {
