--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "firebase": "10.13.2",
-    "dayjs": "^1.11.10",
-    "firebase-functions": "^5.0.0",
-    "firebase-admin": "^12.0.0",
-     "clsx": "2.1.0"
-  }
-  "devDependencies": {
-    "typescript": "^5.6.3",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/node": "^20.14.10",
+  "next": "14.2.4",
+  "react": "18.3.1",
+  "react-dom": "18.3.1",
+  "firebase": "10.13.2",
+  "dayjs": "^1.11.10",
+  "firebase-functions": "^5.0.0",
+  "firebase-admin": "^12.0.0",
+  "clsx": "2.1.0"
+},
+
+"devDependencies": {
+  "typescript": "^5.6.3",
+  "@types/react": "^18.3.3",
+  "@types/react-dom": "^18.3.3",
+  "@types/node": "^20.14.10"
     "tailwindcss": "^3.4.10",
     "postcss": "^8.4.41",
     "autoprefixer": "^10.4.19",
