--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "streakr-starter-plus",
-  "private": true,
   "version": "0.2.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,20 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-  "next": "14.2.4",
-  "react": "18.3.1",
-  "react-dom": "18.3.1",
-  "firebase": "10.13.2",
-  "dayjs": "^1.11.10",
-  "firebase-functions": "^5.0.0",
-  "firebase-admin": "^12.0.0",
-  "clsx": "2.1.0"
-},
-
-"devDependencies": {
-  "typescript": "^5.6.3",
-  "@types/react": "^18.3.3",
-  "@types/react-dom": "^18.3.3",
-  "@types/node": "^20.14.10"
-    }
+    "next": "14.2.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "firebase": "10.13.2",
+    "dayjs": "^1.11.10",
+    "firebase-functions": "^5.0.0",
+    "firebase-admin": "^12.0.0",
+    "clsx": "2.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/node": "20.14.10",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.4",
+    "tailwindcss": "^3.4.7",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.19"
+  }
 }
