--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-confetti": "^6.1.0"
+    "react-confetti": "^6.1.0",
     "firebase": "10.13.2",
     "dayjs": "^1.11.10",
     "firebase-functions": "^5.0.0",
